// Vitest Snapshot v1

exports[`Input 组件测试 > InputAdornment 1`] = `
<DocumentFragment>
  <div
    class="t-input-adornment t-input-adornment--prepend"
  >
    <span
      class="t-input-adornment__prepend"
    >
      http://
    </span>
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input t-size-m t-align-left t-is-default"
      >
        <input
          class="t-input__inner"
          placeholder="请输入内容"
          type="text"
          value=""
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Input 组件测试 > clearable 1`] = `
<DocumentFragment>
  <div
    class="t-input__wrap"
  >
    <div
      class="t-input t-size-m t-align-left t-is-default"
    >
      <input
        class="t-input__inner"
        placeholder="请输入内容"
        type="text"
        value="24/05/2020"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Input 组件测试 > maxLength 1`] = `
<DocumentFragment>
  <div
    class="t-input__wrap"
  >
    <div
      class="t-input t-size-m t-align-left t-is-default"
    >
      <input
        class="t-input__inner"
        placeholder="请输入内容"
        type="text"
        value=""
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Input 组件测试 > prefixIcon is function 1`] = `
<DocumentFragment>
  <div
    class="t-input__wrap"
  >
    <div
      class="t-input t-size-m t-align-left t-is-default t-input--prefix"
    >
      <span
        class="t-input__prefix t-input__prefix-icon"
      >
        <span>
          prefixIcon
        </span>
      </span>
      <input
        class="t-input__inner"
        placeholder="请输入内容"
        type="text"
        value=""
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Input 组件测试 > prefixIcon suffixIcon 1`] = `
<DocumentFragment>
  <div
    class="t-input__wrap"
  >
    <div
      class="t-input t-size-m t-align-left t-is-default t-input--prefix t-input--suffix"
    >
      <span
        class="t-input__prefix t-input__prefix-icon"
      >
        <svg
          class="t-icon t-icon-lock-on"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M6 10v1h4v-1H6z"
            fill="currentColor"
            fill-opacity="0.9"
          />
          <path
            d="M4.5 5v1H3a.5.5 0 00-.5.5v7c0 .28.22.5.5.5h10a.5.5 0 00.5-.5v-7A.5.5 0 0013 6h-1.5V5a3.5 3.5 0 00-7 0zm6 1h-5V5a2.5 2.5 0 015 0v1zm-7 1h9v6h-9V7z"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
      </span>
      <input
        class="t-input__inner"
        placeholder="请输入内容"
        type="password"
        value=""
      />
      <span
        class="t-input__suffix t-input__suffix-icon"
      >
        <svg
          class="t-icon t-icon-error-circle-filled"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M15 8A7 7 0 101 8a7 7 0 0014 0zM8.5 4v5.5h-1V4h1zm-1.1 7h1.2v1.2H7.4V11z"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
      </span>
    </div>
  </div>
</DocumentFragment>
`;
